# radish

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
docs/research/veh_cow/: CPP_BLUEPRINT.md  REPORT.md  veh_poc.rs
src/: App.tsx  index.css  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/radish-cli/: Cargo.toml
src-tauri/crates/radish-cli/src/: client.rs  lib.rs  repl.rs  ui.rs
src-tauri/crates/radish-cli/tests/: cli_tests.rs
src-tauri/crates/radish-proto/: Cargo.toml
src-tauri/crates/radish-proto/src/: frame.rs  lib.rs  parser.rs
src-tauri/crates/radish-proto/tests/: parser_tests.rs
src-tauri/crates/radish-server/: Cargo.toml
src-tauri/crates/radish-server/benches/: engine_bench.rs
src-tauri/crates/radish-server/src/: config.rs  connection.rs  engine.rs  lib.rs  shared.rs
src-tauri/crates/radish-server/src/commands/: acl.rs  connection.rs  generic.rs  hash.rs  list.rs  mod.rs  pubsub.rs  set.rs  string.rs
src-tauri/crates/radish-server/tests/: e2e_tests.rs  engine_tests.rs  overhaul_tests.rs
src-tauri/crates/radish-storage/: Cargo.toml
src-tauri/crates/radish-storage/benches/: keyspace_bench.rs
src-tauri/crates/radish-storage/src/: eviction.rs  keyspace.rs  lib.rs  value.rs
src-tauri/crates/radish-storage/tests/: keyspace_tests.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  lib.rs  main.rs
src/components/: ConnectionForm.tsx  ConnectionsView.tsx  Dashboard.tsx  Titlebar.tsx
src/components/dashboard/: AnalyzeView.tsx  CliView.tsx  ConfigView.tsx  HelpView.tsx  Inspector.tsx  KeyBrowser.tsx  KeysView.tsx  PubSubView.tsx  ServiceView.tsx  Sidebar.tsx  StatsRow.tsx
src/components/ui/: GlobalDialog.tsx  badge.tsx  button.tsx  input.tsx  search-input.tsx  table.tsx
src/constants/: help.ts
src/hooks/: useCli.ts  useConfig.ts  useConnections.ts  useDatabaseStats.ts  useDialog.ts  useGroupedKeys.ts  useInspector.ts  useKeys.ts  useNavigation.ts  usePubSub.ts  useRadish.ts  useResizer.ts  useServerConfig.ts  useService.ts  useStats.ts
src/lib/: format.ts  utils.ts
