[package]
name = "radish"
version = "0.2.0"
description = "A lightweight, local-first Valkey/Redis-compatible database & visual studio."
authors = ["Radish Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "radish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
radish-proto = { version = "0.2.0", path = "crates/radish-proto" }
radish-storage = { version = "0.2.0", path = "crates/radish-storage" }
log = "0.4"
lazy_static = "1.4"
radish-server = { path = "crates/radish-server" }
radish-cli = { path = "crates/radish-cli" }
toml = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[workspace]
members = [
    "crates/*"
]
resolver = "2"

