[package]
name = "radish-server"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
radish-proto = { path = "../radish-proto" }
radish-storage = { path = "../radish-storage" }
bytes = "1.8.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
futures = "0.3.31"
im = "15.1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
radish-cli = { path = "../radish-cli" }

[[bench]]
name = "engine_bench"
harness = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Kernel"] }

