[package]
name = "radish-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { version = "1.12.0", features = ["serde"] }
im = { version = "15.1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "keyspace_bench"
harness = false
